# denarius

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  denarius_accounts.py  denarius_admin.py  denarius_crypto.py  denarius_ledger.py  denarius_network.py  denarius_operations.py  denarius_paths.py  denarius_protocol.py  denarius_storage.py  main.sh  oldREADME.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_denarius.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
benchmarks/: long_chain.py
blockchain/: __init__.py  blockchain.pkl  blockchain.py
blockchain/templates/: configure.html  index.html  login.html  register.html
blockchain_client/: __init__.py  blockchain_client.py  wallet.key
blockchain_client/static/css/: custom.css
blockchain_client/static/js/: console.js  wallet_crypto.js  wallet_store.js
blockchain_client/templates/: activity.html  auth_base.html  base.html  forbidden.html  index.html  login.html  make_transaction.html  network.html  overview.html  register.html  send.html  view_transactions.html  wallets.html
certificates/: cert.p12  cert.pem  key.pem
docs/: ADVERSARIAL_TESTING.md  BRANCH_PROTECTION.md  CONSENSUS.md  INCIDENT_RESPONSE.md  NETWORK_SECURITY.md  OPERATIONS.md  RELEASING.md  SECURITY_REVIEW.md  THREAT_MODEL.md
node_dashboard/: __init__.py  dashboard.py
states/: blockchain.pkl
tests/: test_blockchain_consensus.py  test_integration.py  test_network_soak.py  test_properties.py  wallet_crypto_test.mjs
