[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "denarius-network"
version = "0.5.0"
description = "An educational proof-of-work blockchain node and wallet console"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "loophac" },
]
keywords = ["blockchain", "cryptocurrency", "education", "proof-of-work"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Flask",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "cryptography==49.0.0",
  "Flask==3.1.3",
  "requests==2.34.2",
  "waitress==3.0.2",
]

[project.optional-dependencies]
dev = [
  "build==1.3.0",
  "hypothesis==6.157.1",
  "pytest==9.1.1",
]

[project.scripts]
denarius = "run_denarius:main"
denarius-node = "blockchain.blockchain:main"
denarius-console = "blockchain_client.blockchain_client:main"
denarius-admin = "denarius_admin:main"

[project.urls]
Homepage = "https://github.com/loophac/denarius"
Issues = "https://github.com/loophac/denarius/issues"
Repository = "https://github.com/loophac/denarius"
Security = "https://github.com/loophac/denarius/security/policy"

[tool.setuptools]
include-package-data = true
py-modules = [
  "denarius_accounts",
  "denarius_admin",
  "denarius_crypto",
  "denarius_ledger",
  "denarius_network",
  "denarius_operations",
  "denarius_paths",
  "denarius_protocol",
  "denarius_storage",
  "run_denarius",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["blockchain", "blockchain_client", "node_dashboard"]

[tool.setuptools.package-data]
blockchain_client = [
  "templates/*.html",
  "static/*",
  "static/**/*",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
  "integration: starts real Denarius service processes and communicates over HTTP",
  "soak: long-running network and lifecycle verification",
]
